TWEAK: Make sure content doesn't overflow

--- a/src/components/picto-graph/picto-graph.styl
+++ b/src/components/picto-graph/picto-graph.styl
@@ -37,6 +37,8 @@ main
   overflow scroll
   picto-preview
     mb 4
+  picto-md
+    display block
 
 aside
   width 320px
